BakingTray ChangeLog

Most commits and development should go in the dev branch (or a branch devoted to a specific feature).
When mature, changes should be merged into master *as a merge commit*  and this changelog file updated.

14th August 2017
- USER: The recipe fast z-settings are applied after each rapid preview scan.
- USER: Report estimated disk space and number of channels to main BakingTray GUI.
- USER: Acquisition will not start if there is insufficient disk space.
- USER: Checkboxes in Acquisition view for turning off laser after acq finishes and slicing the last section.
- USER: Improve the accuracy of the initial acquisition time estimate. 
- BUGFIX: Slicing events and section finishe are now logged to detailed section log file
- ScanImage pZ adjust no longer set by BakingTray
- "Keep resonant scanner on" always set to false in SIBT teardown method.

4th August 2017
- USER: Define imaging area by drawing a box. Zoom in and out. 
- USER: Channel offsets no longer subtracted in ScanImage.
- USER: Z-stack settings applied to ScanImage when the acquisition view opens. 
- Multiple bug fixes.


2nd August 2017 
- PMTs turn off automatically at the end of acquisition. 
- Various bug fixes including to on-line preview image display.
- Tweaks to laser control that should fix some latency issues and error messages.


25th July 2017
- USER: Basic resumption of previous acquisition now works but is not well tested yet.
- USER: Substantial speed improvements save about 3 hours off a typical acquisition.
- USER: Front/Left and Cutting Start Point in the Prepare GUI can now be manually edited.
- USER: Fast Z flyback time and turn-around blanking are now set via ScanImage CFG files not the SYSTEM settings YML.
- DEVELOPER: recipe.TileStepSize and recipe.NumTiles are now separate classes.
- Stage position corresponding to mouse location in preview image is shown. 
- Improve the way default files are created on first startup of a fresh install.